footer gets ready

--- a/contact.html
+++ b/contact.html
@@ -1,116 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fashionable and sporty raincoats for active people" />
-    <title>Rainydays | Home</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/contact.css" rel="stylesheet" />
-    <link href="css/media.css" rel="stylesheet" />
-    <!-- Hotjar Tracking Code for https://elastic-borg-471077.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2962927,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-</head>
-<body>
-  <header>
-        <a href="index.html">
-        <img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-    <nav>
-      <ul>
-        <li><a href="men.html">men</a></li>
-        <li><a href="women.html">women</a></li>
-        <li><a href="kids.html">kids</a></li>
-        <li><a href="contact.html" class="active">contact</a></li>
-        <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
-        <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
-      </ul>
-    </nav>
-  </header>
-<main>
-  <div class="contacts">
-    <div>
-      <div class="contact_points">
-        <h1>Ways to contact us: </h1>
-        <h2>1142 Yorkshire Circle Rocky Mount</h2>
-        <h2>North Carolina 27801 USA</h2>
-      </div>
-      <div class="contact_points">
-        <h2><a href="mailto:customerservice@rainydays.com">E-mail: customerservice@rainydays.com</a></h2>
-      </div>
-      <div class="contact_points">
-        <h2><a href="tel:+12529554024">Tel: 252-955-4024</a></h2>  
-      </div>
-      <div class="contact_points">
-        <h2><a href="wwww.facebook.com/rainydays">facebook.com/rainydays</a></h2>
-        <h2><a href="www.messenger.com/rainydays">messenger.com/rainydays</a></h2>
-      </div>
-    </div>
-    <div>
-      <form id="contactForm" method="POST">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Fashionable and sporty raincoats for active people" />
+      <title>Rainydays | Home</title>
+      <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
+      <link href="css/styles.css" rel="stylesheet" />
+      <link href="css/contact.css" rel="stylesheet" />
+      <link href="css/media.css" rel="stylesheet" />
+      <!-- Hotjar Tracking Code for https://elastic-borg-471077.netlify.app/ -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2962927,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+  </head>
+  <body>
+    <header>
+          <a href="index.html">
+          <img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+      <nav>
+        <ul>
+          <li><a href="men.html">men</a></li>
+          <li><a href="women.html">women</a></li>
+          <li><a href="kids.html">kids</a></li>
+          <li><a href="contact.html" class="active">contact</a></li>
+          <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
+          <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="contacts">
         <div>
-          <fieldset>
-            <legend><strong>Sign up for newsletter</strong></legend>
-            <div>
-              <label for="first_name">First name (required)</label>
-              <input type="text" name="first_name" id="firstName" class="form__input">
-              <div class="form-error" id="firstNameError">Please enter your first name</div>
-            </div>
-            <div>
-              <label for="last_name">Last name</label>
-              <input type="text" name="last_name" id="lastName" class="form__input">
-            </div>
-            <div>
-              <label for="email">e-mail (required)</label>
-              <input type="email" name="email" id="email" class="form__input">
-              <div class="form-error" id="emailError">Please enter a valid e-mail address</div>
-            </div>
-            <button>Sign up</button>
-          </fieldset>
-        </div>  
-      </form>
-    </div>
-  </div>
-</main>
-<footer> 
-  <div class="footer__line">
-    <div class="footer">
-      <div class="footer__container">
-        <h2>Customer service</h2>
-        <p><a href="contact.html">Returns</a></p>
-        <p><a href="contact.html">Terms & Conditions</a></p>
-        <p><a href="contact.html">Contact us</a></p>
-        <p><a href="contact.html">About us</a></p>
-        <p><a href="contact.html">Privacy Policy</a></p>
-      </div>
-      <div class="footer__container">
-        <h2>Follow us</h2>
-        <p><a href="www.facebook.com">Facebook</a></p>
-        <p><a href="www.instagram.com">Instagram</a></p>
-        <p><a href="www.tiktok.com">TikTok</a></p>
-      </div>
-      <div class="footer__container">
-        <h2>Sign up for our newsletter and get 15% off</h2>
-        <div>
-          <input type="email" name="email" id="email" class="form__input" placeholder="email address">
+          <div class="contact_points">
+            <h1>Ways to contact us: </h1>
+            <h2>1142 Yorkshire Circle Rocky Mount</h2>
+            <h2>North Carolina 27801 USA</h2>
+          </div>
+          <div class="contact_points">
+            <h2 class="email-contact"><a href="mailto:customerservice@rainydays.com">E-mail: customerservice@rainydays.com</a></h2>
+          </div>
+          <div class="contact_points">
+            <h2><a href="tel:+12529554024">Tel: 252-955-4024</a></h2>  
+          </div>
+          <div class="contact_points">
+            <h2><a href="wwww.facebook.com/rainydays">facebook.com/rainydays</a></h2>
+            <h2><a href="www.messenger.com/rainydays">messenger.com/rainydays</a></h2>
+          </div>
         </div>
         <div>
-          <input type="submit" name="subscribe" value="Sign me up" id="subscribe" class="button">
+          <form id="contactForm" method="POST">
+            <div>
+              <fieldset>
+                <legend><strong>Sign up for newsletter</strong></legend>
+                <div>
+                  <label for="first_name">First name (required)</label>
+                  <input type="text" name="first_name" id="firstName" class="form__input">
+                  <div class="form-error" id="firstNameError">Please enter your first name</div>
+                </div>
+                <div>
+                  <label for="last_name">Last name</label>
+                  <input type="text" name="last_name" id="lastName" class="form__input">
+                </div>
+                <div>
+                  <label for="email">e-mail (required)</label>
+                  <input type="email" name="email" id="email" class="form__input">
+                  <div class="form-error" id="emailError">Please enter a valid e-mail address</div>
+                </div>
+                <button>Sign up</button>
+              </fieldset>
+            </div>  
+          </form>
         </div>
       </div>
-    </div>
-  </div>
-</footer>
-<script src="js/contact.js"></script>
-</body>
+    </main>
+    <footer> 
+      <div class="footer__line">
+        <div class="footer">
+          <div class="footer__container">
+            <h2>Customer service</h2>
+            <p><a href="contact.html">Returns</a></p>
+            <p><a href="contact.html">Terms & Conditions</a></p>
+            <p><a href="contact.html">Contact us</a></p>
+            <p><a href="contact.html">About us</a></p>
+            <p><a href="contact.html">Privacy Policy</a></p>
+          </div>
+          <div class="footer__container">
+            <h2>Follow us</h2>
+            <p><a href="www.facebook.com">Facebook</a></p>
+            <p><a href="www.instagram.com">Instagram</a></p>
+            <p><a href="www.tiktok.com">TikTok</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="js/contact.js"></script>
+  </body>
 </html>
