--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -53,24 +53,10 @@
         <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" class="img_big">
       </div>
       <section class="product_description">
-        <h1>BigCityLife</h1>
-        <h2>250 USD</h2>
-      <!-- <div class="sizes">
-          <p class="sizes_item">M</p>
-          <p class="sizes_item">L</p>
-          <p class="sizes_item">XL</p>
-      </div> -->
-        <div class="qty_1">
-          <!-- <div class="qty_3">
-            <p>Qty</p>
-          </div>
-          <div>
-            <fieldset class="qty_2">
-              <input class="quantity-input" type="number">
-            </fieldset>
-          </div> -->
-        </div>
-        <a href="checkout.html" class="addtocart_cta">Add to cart</a> 
+        <h1 class="product-name">BigCityLife Jacket</h1>
+        <h2 class="product-price">250 USD</h2>
+        <button class="addtocart_cta">Add to cart</button>
+        <!-- <a href="checkout.html" class="addtocart_cta">Add to cart</a>  -->
           <h3 class="details_1">Details</h3>
           <ul class="details_2">
             <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
@@ -79,9 +65,27 @@
       </section>
     </div>
   </main>
-<footer> 
-  <p>&copy; Bori Kokeny</p>
-</footer>
-  <script src="js/jacketspecific.js"></script>     
+  <footer>
+    <div class="footer__line">
+      <div class="footer">
+        <div class="footer__container">
+          <h2>Customer service</h2>
+          <p><a href="contact.html">Returns</a></p>
+          <p><a href="contact.html">Terms & Conditions</a></p>
+          <p><a href="contact.html">Contact us</a></p>
+          <p><a href="contact.html">About us</a></p>
+          <p><a href="contact.html">Privacy Policy</a></p>
+        </div>
+        <div class="footer__container">
+          <h2>Follow us</h2>
+          <p><a href="www.facebook.com">Facebook</a></p>
+          <p><a href="www.instagram.com">Instagram</a></p>
+          <p><a href="www.tiktok.com">TikTok</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="js/jacketspecific.js" type="module"></script>  
+  <script src="js/checkout.js" type="module"></script>  
 </body>
 </html>
