--- a/women.html
+++ b/women.html
@@ -102,8 +102,25 @@
             </div>
         </section>
       </main>
-      <footer> 
-        <p>&copy; Bori Kokeny</p>
+      <footer>
+        <div class="footer__line">
+          <div class="footer">
+            <div class="footer__container">
+              <h2>Customer service</h2>
+              <p><a href="contact.html">Returns</a></p>
+              <p><a href="contact.html">Terms & Conditions</a></p>
+              <p><a href="contact.html">Contact us</a></p>
+              <p><a href="contact.html">About us</a></p>
+              <p><a href="contact.html">Privacy Policy</a></p>
+            </div>
+            <div class="footer__container">
+              <h2>Follow us</h2>
+              <p><a href="www.facebook.com">Facebook</a></p>
+              <p><a href="www.instagram.com">Instagram</a></p>
+              <p><a href="www.tiktok.com">TikTok</a></p>
+            </div>
+          </div>
+        </div>
       </footer>
 </body> 
 </html> 
