--- a/checkout.html
+++ b/checkout.html
@@ -51,10 +51,10 @@
         </div>
         <div class="review-fillup">
           <div>
-            <img class="review-fillup-parts cart-img" src="images/Woman_in_yellow_jacket_with_camera.jpeg">
-            <span class="review-fillup-parts cart-name">BigCityLife</span>
+            <img class="review-fillup-parts cart-img" src="">
+            <span class="review-fillup-parts cart-name"></span>
           </div>
-          <span class="review-fillup-parts cart-price">250 USD</span>
+          <span class="review-fillup-parts cart-price"></span>
           <div>
             <input class="review-fillup-parts quantity-input" type="number">
             <button class="remove-button">Remove</button>
@@ -93,10 +93,27 @@
      </div>
     </section>
   </main>
-    <footer> 
-      <p>&copy; Bori Kokeny</p>
+  <footer>
+    <div class="footer__line">
+      <div class="footer">
+        <div class="footer__container">
+          <h2>Customer service</h2>
+          <p><a href="contact.html">Returns</a></p>
+          <p><a href="contact.html">Terms & Conditions</a></p>
+          <p><a href="contact.html">Contact us</a></p>
+          <p><a href="contact.html">About us</a></p>
+          <p><a href="contact.html">Privacy Policy</a></p>
+        </div>
+        <div class="footer__container">
+          <h2>Follow us</h2>
+          <p><a href="www.facebook.com">Facebook</a></p>
+          <p><a href="www.instagram.com">Instagram</a></p>
+          <p><a href="www.tiktok.com">TikTok</a></p>
+        </div>
+      </div>
+    </div>
   </footer>
-  <script src="js/checkout.js"></script>  
+  <script src="js/checkout.js" type="module"></script>  
   </body>
   </html> 
   
