--- a/women.html
+++ b/women.html
@@ -31,7 +31,7 @@
             <li><a href="women.html" class="active">women</a></li>
             <li><a href="kids.html">kids</a></li>
             <li><a href="contact.html">contact</a></li>
-            <li><a href="search.html"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
+            <input type="search" id="search_field" placeholder="Search for jackets...">
             <li><a href=checkout.html><img class="nav_end" id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
           </ul>
         </nav>
