--- a/checkout.html
+++ b/checkout.html
@@ -113,6 +113,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/jacketspecific.js" type="module"></script>  
   <script src="js/checkout.js" type="module"></script>  
   </body>
   </html> 
