--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,7 @@
                   <div class="form-error" id="emailError">Please enter a valid e-mail address</div>
                 </div>
                 <button>Sign up</button>
+                <p class="thankyou-message"></p>
               </fieldset>
             </div>  
           </form>
