--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -39,7 +39,7 @@
   <main>
     <div class="specific_grid">
       <section class="row">
-        <div>
+        <!-- <div>
           <img src="images/Coffe_lady.jpeg" class="img_small">
         </div>
        <div>
@@ -51,21 +51,21 @@
       </section>
       <div >
         <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" class="img_big">
-      </div>
+      </div> -->
       <section class="product_description">
-        <h1 class="product-name">BigCityLife Jacket</h1>
+        <!-- <h1 class="product-name">BigCityLife Jacket</h1>
         <h2 class="product-price">250 USD</h2>
-        <button class="addtocart_cta">Add to cart</button>
-        <!-- <a href="checkout.html" class="addtocart_cta">Add to cart</a>  -->
-          <h3 class="details_1">Details</h3>
+        <button class="addtocart_cta">Add to cart</button> 
+        <a href="checkout.html" class="addtocart_cta">Add to cart</a>
+        <h3 class="details_1">Details</h3>
           <ul class="details_2">
             <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
             <li>Ventilation zipper on the side.</li>
-          </ul>
+          </ul> -->
       </section>
     </div>
   </main>
-  <footer>
+<footer>
     <div class="footer__line">
       <div class="footer">
         <div class="footer__container">
@@ -86,6 +86,7 @@
     </div>
   </footer>
   <script src="js/jacketspecific.js" type="module"></script>  
+  <script src="js/men.js" type="module"></script>
   <script src="js/checkout.js" type="module"></script>  
 </body>
 </html>
