--- a/men.html
+++ b/men.html
@@ -40,7 +40,7 @@
         <h1>Raincoats for men</h1>
         <h2>Home/Men</h2>
         <section class="featured2">
-          <div class="products">
+          <!-- <div class="products">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_lauging.jpeg" alt="Man in yellow jacket and hat"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
@@ -99,7 +99,7 @@
               <a href="jacketspecific.html"><img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-            </div>
+            </div> -->
           </section>
     </main>
     <footer>
@@ -121,6 +121,8 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> 
+<script src="js/men.js" type="module"></script>  
+<script src="js/jacketspecific.js" type="module"></script>
 </body>
 </html>
