first edit on cms ca

--- a/featured.html
+++ b/featured.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/jacketspecific.css" rel="stylesheet" />
+    <link href="css/links.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <!-- Hotjar Tracking Code for https://elastic-borg-471077.netlify.app/ -->
 <script>
@@ -37,35 +38,24 @@
     </nav>
   </header>
   <main>
-    <div class="specific_grid">
-      <section class="row">
-         <div>
-          <img src="images/Coffe_lady.jpeg" class="img_small">
-        </div>
-       <div>
-         <img src="images/Mobile_lady.jpeg" class="img_small"> 
-       </div>
-       <div>
-         <img src="images/Going_lady.jpeg" class="img_small">
-        </div>
-      </section>
+    <div class="specific_grid2">
       <div >
         <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" class="img_big">
       </div>
       <section class="product_description">
         <h1 class="product-name">BigCityLife Jacket</h1>
         <h2 class="product-price">250 USD</h2>
-        <!-- <button class="addtocart_cta">Add to cart</button>  -->
+        <button class="addtocart_cta">Add to cart</button> 
         <a href="checkout.html" class="addtocart_cta">Add to cart</a>
         <h3 class="details_1">Details</h3>
-          <ul class="details_2">
+        <ul class="details_2">
             <li>Waterproof, light and convenient jacket for everyday and outdoor live.</li>
             <li>Ventilation zipper on the side.</li>
-          </ul>
-      </section>
+          </ul> 
+       </section>
     </div>
   </main>
-<footer>
+  <footer>
     <div class="footer__line">
       <div class="footer">
         <div class="footer__container">
@@ -84,9 +74,9 @@
         </div>
       </div>
     </div>
-  </footer>
-  <script src="js/jacketspecific.js" type="module"></script>  
-  <script src="js/men.js" type="module"></script>
-  <script src="js/checkout.js" type="module"></script>  
+  </footer> 
+  <script src="js/featured.js" type="module"></script>
+  <script src="js/index.js" type="module"></script>  
 </body>
 </html>
+
