--- a/newproducts.html
+++ b/newproducts.html
@@ -40,8 +40,8 @@
       <main class="jackets">
         <h1>New products</h1>
         <h2>Home/New Products</h2>
-        <section class="featured2">
-            <div class="products">
+        <!-- <section class="featured2"> -->
+            <!-- <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind"></a>
                 <h2>Softshell Raincoat</h2>
                 <p>650 USD</p>
@@ -100,8 +100,11 @@
                 <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_camera.jpeg" alt="Woman in blue jacket with a camera"></a>
                 <h2>Softshell Raincoat</h2>
                 <p>650 USD</p>
+              </div> -->
+              <div class="newproducts">
+                <div class="product-image"></div>
               </div>
-          </section>
+          <!-- </section> -->
     </main>
     <footer>
       <div class="footer__line">
@@ -123,5 +126,6 @@
         </div>
       </div>
     </footer>
+<script src="js/index.js" type="module"></script>   
 </body>
 </html>
