--- a/men.html
+++ b/men.html
@@ -121,7 +121,8 @@
           </div>
         </div>
       </div>
-    </footer> 
+    </footer>   
+<script src="js/index.js" type="module"></script>       
 <script src="js/men.js" type="module"></script>  
 <script src="js/jacketspecific.js" type="module"></script>
 </body>
